Add Claude Code documentation and fix backend issues
- Add .claude/ documentation for team collaboration
  - Command templates, development guide, troubleshooting
  - Project structure, Windows-specific notes
- Add AbstractIntegrationTest base class
- Fix GlobalExceptionHandler improvements
- Update DTOs with validation annotations
- Fix checkstyle and spotbugs configurations
- Update test configurations

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>